# msdc-core

./: .pylintrc  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
msdc_core/: __init__.py
msdc_core/control/: __init__.py  controller.py  perspective_transform.py  preprocess_dataset.py  steering_dataset.py  train_steering_net.py
msdc_core/navigation/: __init__.py  navigator.py
msdc_core/perception/: __init__.py  detector.py
msdc_core/steering_net/: augment_dataset.py  balance_dataset.py  dataset_utils.py  perspective_transform.py  preprocess_dataset.py  steering_dataset.py  steering_net.py  test_inference_speed.py  train.py
tests/: __init__.py  test_control.py  test_navigation.py  test_perception.py
